# rusty-dice

./: Cargo.toml  DESIGN_NOTES.md  README.md
src/: command.rs  dice.rs  lib.rs  logger.rs
