[package]
name = "rustydice"
version = "1.0.0"
authors = ["Kevin Phung <phung.kevin@gmail.com>"]
description = "A dice rolling app. Inspired by Dice Dude."
repository = "https://github.com/dsxragnarok/rusty-dice"
keywords = ["dice", "dnd", "tabletop", "rpg"]

[dependencies]
chrono = "0.4"
rand = "0.5.5"
